[package]
name = "rgg"
version = "0.1.0"
authors = ["JD <jeandamien.brossillon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
bitflags = "1.2.1"
ggez = "0.5.1"
cgmath = { version="0.17.0", features=["mint"]}
cpal = "0.11.0"
