[package]
name = "rgg"
version = "0.1.0"
authors = ["JD <jeandamien.brossillon@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
clap = "2.33.0"
bitflags = "1.2.1"
ggez = "0.7.0"
wgpu = "0.12.0"
glam = "0.20.5"
cpal = "0.13.5"
rand = "0.8.0"
serde = { version="1.0.118", features=["derive"] }
serde_json = "1.0.61"
base64 = "0.13.0"
